--- a/sign-in-kotlin/app/src/main/res/raw/config.json
+++ b/sign-in-kotlin/app/src/main/res/raw/config.json
@@ -1,11 +1,11 @@
 {
-  "client_id": "",
-  "redirect_uri": "",
-  "end_session_redirect_uri": "",
+  "client_id": "0oa1bm6jgd4ifZnqy0h8",
+  "redirect_uri": "com.oktapreview.foodstuffs:/callback",
+  "end_session_redirect_uri": "com.oktapreview.foodstuffs:/",
   "scopes": [
     "openid",
     "profile",
-    "offline_access",
+    "offline_access"
   ],
-  "discovery_uri": ""
+  "discovery_uri": "https://foodstuffs.oktapreview.com"
 }
